--- a/unit_conversion.ipynb
+++ b/unit_conversion.ipynb
@@ -14,43 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6c4063f4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'symbol': 'ft/s2',\n",
-       " 'name': 'foot per square second',\n",
-       " 'measurement': 'acceleration',\n",
-       " 'metric': {'symbol': 'm/s2',\n",
-       "  'name': 'meter per square second',\n",
-       "  'scale': 0.30479999999999996,\n",
-       "  'offset': 0},\n",
-       " 'english': {'symbol': 'ft/s2',\n",
-       "  'name': 'foot per square second',\n",
-       "  'scale': 1,\n",
-       "  'offset': 0},\n",
-       " 'canonical': {'symbol': 'm/s2',\n",
-       "  'name': 'meter per square second',\n",
-       "  'scale': 0.30479999999999996,\n",
-       "  'offset': 0}}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'units_converter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01munits_converter\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01munits_converter\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'units_converter'"
+     ]
     }
    ],
    "source": [
-    "sys.path.append( os.path.join(\"D:\\\\\",\"Jupyter\"))\n",
-    "\n",
-    "\n",
-    "\n",
-    "import pysage.units.units_converter as units_converter\n",
-    "\n",
-    "units_converter.units_table['ft/s2']"
+    "import units_converter as units_converter\n"
    ]
   },
   {
@@ -14744,9 +14725,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -14758,7 +14739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
